--- a/css/services.css
+++ b/css/services.css
@@ -13,7 +13,9 @@
 }
 .atmosphere {
     position: relative;
-    left: -120px
+    left: -120px;
+    max-width: 674.75px;
+    width: 100%;
 }
 .arrow-text {
     display: flex;
@@ -27,7 +29,9 @@
     font-size: 25px;
     line-height: 35px;
     color: #000000;
-    width: 280px;
+    white-space: nowrap;
+    max-width: 280px;
+    width: 100%;
 }
 .arrow-text-price {
     font-family: 'Rubik', sans-serif;
@@ -38,7 +42,7 @@
     text-align: center;
     color: #000000;
     margin-left: 25px;
-    width: 200px;
+    white-space: nowrap;
 }
 .our-services {
     font-family: 'Ruda', sans-serif;
@@ -56,7 +60,8 @@
     font-size: 20px;
     line-height: 30px;
     color: #000000;
-    margin-top: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .service-button {
@@ -74,10 +79,43 @@
     border-radius: 10px;
     background-color: transparent;
     cursor: pointer;
-    margin-top: 50px;
 }
 
 .service-button:hover {
     background: #EB6FFF;
     color: #fff;
+}
+.services-info-mobile-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 960px;
+    width: 100%;
+}
+.arrow-text-mobile {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 60px;
+}
+.image-arrow-mobile {
+    max-width: 77px;
+    width: 100%;
+    max-height: 77px;
+    height: 100%;
+}
+.our-services-mobile {
+    text-align: center;
+}
+.services-info-mobile {
+    padding-top: 50px;
+    padding-bottom: 100px;
+    display: none;
+    justify-content: center;
+    flex-direction: column;
+}
+.service-button-mobile {
+    margin: 0 auto;
 }
