--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,6 @@
 .mod {
     max-width: 1440px;
-    background: url(../images/about.png) no-repeat 0% 66%;
+    background: url(../images/about.png) no-repeat 0% 115%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,6 +9,7 @@
 
 .about {
     background: linear-gradient(90deg, rgba(235, 111, 255, 0.25) 0%, rgba(202, 233, 235, 0.25) 100%);
+    padding-bottom: 100px;
 }
 
 .about-content {
@@ -94,7 +95,6 @@
     cursor: pointer;
     margin: 0 auto;
     margin-top: 20px;
-    margin-bottom: 100px;
 }
 .about-button:hover {
     background-color: #EB6FFF;
