--- a/css/banner.css
+++ b/css/banner.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 383px;
+    padding-bottom: 57px;
 }
 
 .header-banner {
@@ -19,7 +21,6 @@
     line-height: 75px;
     text-align: center;
     text-transform: uppercase;
-    margin-top: 383px;
     color: #fff;
     overflow-y: hidden;
 }
@@ -44,7 +45,7 @@
     color: #CAE9EB;
     text-decoration: none;
     padding: 20px 23px;
-    margin: 50px 0px 57px 0px;
+    margin-top: 50px;
     border: 2px solid #CAE9EB;
     border-radius: 10px;
     background-color: transparent;
