--- a/css/header-menu.css
+++ b/css/header-menu.css
@@ -2,9 +2,10 @@
     background: rgba(202, 233, 235, 0.5);
     border: 1px solid #000000;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: absolute;
+    position: fixed;
     height: 91px;
     width: 100%;
+    z-index: 12;
 }
 .header-menu-content {
     display: flex;
@@ -29,6 +30,23 @@
     color: #FFFFFF;
     margin-right: 25px;
     cursor: pointer;
+    text-decoration: none;
+}
+.header-menu-content>ul>li>a {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-family: 'Rubik', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    cursor: pointer;
+    text-decoration: none;
 }
 .lang {
     display: flex;
