--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,8 @@
 .container {
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0px 15px;
+    width: 100%;
 }
 
 
@@ -99,6 +101,9 @@
 }
 
 @media (max-width: 1216px) {
+    .what-is-barre {
+        margin-top: 0px;
+    }
     .about-button {
         margin-top: 110px;
     }
@@ -114,9 +119,6 @@
     .mod {
         max-width: 960px;
         background: transparent;
-    }
-    .cases-text {
-        margin-bottom: 60px;
     }
     .mentoring-content {
         display: flex;
@@ -136,34 +138,21 @@
         flex-wrap: wrap;
         justify-content: center;
     }
-    .footer-content {
-        justify-content: space-around;
-        width: 960px;
-    }
-    .contacts {
-        margin-left: 0px;
-        margin-right: 0px;
-    }
-    .politics {
-        margin-right: 0px;
-    }
     .atmosphere {
         position: static;
         margin: 0 auto;
     }
     .services-info {
-        position: static;
+        display: none;
+    }
+    .services-info-mobile {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
     .any-training-text {
         text-align: center;
     }
     .kate-img {
         width: 417px;
-        height: 585px;
     }
     .plan-consult {
         margin-left: 0px;
@@ -173,6 +162,10 @@
     }
     .arrow-button {
         max-width: 1035px;
+    }
+    .cases-arrow {
+        max-width: 520px;
+        width: 100%;
     }
     .who-button {
         max-width: 1035px;
@@ -187,9 +180,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
-    .mission-text-left {
-        left: -75px;
     }
     .mission-column-2 {
         overflow: hidden;
@@ -216,7 +206,7 @@
         right: 217px;
     }
     .nine {
-        top: 5715px;
+        top: 5755px;
         left: 200px
     }
     .ten {
@@ -234,9 +224,30 @@
     }
     .container {
         max-width: 960px;
+        width: 100%;
     }
 }
 @media (max-width: 1014px) {
+    .pc-menu {
+        display: none;
+    }
+    .hamburger-menu {
+        display: block;
+    }
+    .footer-content {
+        justify-content: center;
+        flex-direction: column;
+    }
+    .contacts-text {
+        text-align: center;
+    }
+    .contacts {
+        margin-bottom: 40px;
+    }
+    .politics {
+        text-align: center;
+        margin-bottom: 40px;
+    }
     .header-menu-content>ul>li {
         font-size: 14px;
     }
@@ -247,17 +258,16 @@
     .banner-tagline {
         font-size: 14px;
     }
-    .footer-content {
-        width: 768px;
-    }
     .container {
         max-width: 768px;
+        width: 100%;
     }
     .about-content-mobile {
         max-width: 768px;
     }
     .diploms-container {
         max-width: 622px;
+        width: 100%;
     }
     .arrow-button {
         max-width: 740px;
@@ -268,10 +278,10 @@
     .who-slide-text {
         font-size: 15px;
     }
-    .who-do-slide-img {
+    /* .who-do-slide-img {
         width: 768px;
         height: 385px;
-    }
+    } */
     .who-button {
         max-width: 845px;
         bottom: 225px;
@@ -299,14 +309,19 @@
      }
 }
 @media (max-width: 848px) {
-    .pc-menu {
-        display: none;
+    .m-left-29 {
+        margin-right: 20px;
     }
-    .hamburger-menu {
-        display: block;
+    .m-left-36 {
+        margin-right: 20px;
+    }
+    .diagramma  {
+        max-width: 500px;
+        width: 100%;
     }
     .container {
         max-width: 500px;
+        width: 100%;
     }
     .banner-text {
         font-size: 25px;
@@ -321,8 +336,7 @@
         justify-content: center;
     }
     .mission-text-left {
-        top: -76px;
-        left: -10px;
+        margin-top: -80px;
     }
     .mission-column-2 {
         display: flex;
@@ -333,6 +347,7 @@
     }
     .mission-text-right {
         top: 72px;
+        left: 40px;
     }
     .mod {
         max-width: 500px;
@@ -344,7 +359,8 @@
         max-width: 320px;
     }
     .diploms-container {
-        max-width: 281px;
+        max-width: 311px;
+        width: 100%;
     }
     .arrow-button {
         max-width: 400px;
@@ -358,10 +374,10 @@
     .who-slide-text {
         font-size: 10px;
     }
-    .who-do-slide-img {
+    /* .who-do-slide-img {
         width: 500px;
         height: 250px;
-    }
+    } */
     .who-button {
         max-width: 600px;
         bottom: 160px;
@@ -379,14 +395,11 @@
         height: 725px;
     }
     .basic {
-        height: 690px;
+        height: 700px;
     }
-    .atmosphere {
-        width: 500px;
-    }
+    
     .arrow-text-barre {
         font-size: 18px;
-        width: auto;
     }
     .arrow-text-price {
         font-size: 20px;
@@ -401,40 +414,45 @@
     .video-size {
         height: 289px;
     }
-    .footer-content {
-        width: 500px;
-        flex-direction: column;
-    }
-    .contacts {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-    }
-    .politics {
-        text-align: center;
-        margin-top: 30px;
-        margin-bottom: 30px;
-    }
-    .footer {
-        height: 350px;
-    }
+    
 }
 @media (max-width: 620px) {
+    .mission-text-left {
+        margin-left: -30px;
+    }
+    .mission-text-right {
+        left: 5px;
+    }
+    .privat-button {
+        font-size: 12px;
+    }
+    .basic-button {
+        font-size: 14px;
+    }
+    .individ-mentor {
+        font-size: 12px;
+    }
+    .individ-mentor-black {
+        font-size: 12px;
+    }
     .mentoring-image {
         display: none;
     }
     .container {
         max-width: 350px;
+        width: 100%;
     }
     .mission-column-1 {
-        width: 350px;
+        max-width: 350px;
+        width: 100%;
     }
     .mission-column-2 {
-        width: 350px;
+        max-width: 350px;
+        width: 100%;
     }
     .diploms-container {
-        max-width: 281px;
+        max-width: 311px;
+        width: 100%;
     }
     .work-format-text {
         font-size: 10px;
@@ -443,42 +461,42 @@
         display: none;
     }
     .mod-cont {
-        max-width: 400px;
+        max-width: 350px;
     }
     .who-button {
         max-width: 410px;
+        width: 100%;
+        bottom: 115px;
     }
     .d-flex-text {
-        font-size: 12px;
+        font-size: 11px;
     }
     .privat {
-        height: 785px;
+        height: 780px;
     }
     .basic {
         height: 730px;
     }
     .d-flex-text-black {
-        font-size: 12px;
+        font-size: 11px;
     }
     .image-arrow {
         display: none;
     }
-    .atmosphere {
-        width: 350px;
-    }
+    
     .video {
         max-width: 350px;
     }
     .video-size {
         height: 200px;
     }
-    .footer-content {
-        width: 350px;
-    }
     .banner-text {
-        width: 350px;
+        max-width: 350px;
+        width: 100%;
         font-size: 19px;
-        margin-top: 240px;
+    }
+    .banner {
+        padding-top: 160px;
     }
     .four {
         display: none;
@@ -489,7 +507,36 @@
     .three {
         display: none;
     }
-    
+    .six {
+        display: none;
+    }
+    .our-services-mobile {
+        font-size: 20px;
+    }
+    .arrow-text-price {
+        font-size: 16px;
+    }
+    .arrow-text-barre {
+        font-size: 16px;
+    }
+    .image-arrow-mobile {
+        display: none;
+    }
 }
-
-
+@media (max-width: 500px) {
+    .video {
+        max-width: 320px;
+        width: 100%;
+    }
+    .video-size {
+        height: 180px;
+    }
+}
+@media (max-width: 348px) {
+    .privat {
+        height: 835px;
+    }
+    .menu__box {
+        width: 265px;
+    }
+}
