--- a/css/who-do-i-work-with.css
+++ b/css/who-do-i-work-with.css
@@ -7,12 +7,13 @@
     text-align: center;
     text-transform: uppercase;
     color: #000000;
-    margin-bottom: 50px;
-    margin-top: 70px;
+    padding-bottom: 50px;
+    padding-top: 70px;
 }
 .who-do-slide-img {
-    width: 996px;
-    height: 500px;
+    max-width: 996px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 .who-do-slide {
@@ -79,5 +80,5 @@
     letter-spacing: 0.05em;
     text-transform: uppercase;
     color: #000000;
-    margin-bottom: 100px;
+    padding-bottom: 100px;
 }
