--- a/css/rates.css
+++ b/css/rates.css
@@ -20,7 +20,7 @@
     background: #EB6FFF;
     border-radius: 10px;
     padding-top: 35px;
-    padding-right: 25px;
+    margin-right: 25px;
 }
 .privat-logo {
     background: #FFFFFF;
