--- a/css/cases.css
+++ b/css/cases.css
@@ -1,6 +1,5 @@
 .cases-text {
     text-align: center;
-    padding-top: 105px;
     font-family: 'Ruda', sans-serif;
     font-style: normal;
     font-weight: 900;
@@ -8,7 +7,7 @@
     line-height: 30px;
     text-transform: uppercase;
     color: #000000;
-    padding-bottom: 100px;
+    margin-bottom: 100px;
 }
 .cases-slide {
     max-width: 383px;
