--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -65,7 +65,7 @@
     height: 100%;
   
     margin: 0;
-    padding: 80px 0;
+    padding: 80px 24px;
   
     list-style: none;
   
@@ -79,9 +79,9 @@
   
   .menu__item {
     display: block;
-    padding: 12px 24px;
   
     color: #000;
+    margin-top: 15px;
   
     font-family: 'Ruda', sans-serif;
     font-size: 20px;
@@ -110,11 +110,11 @@
     max-width: 90px;
     width: 100%;
     justify-content: space-between;
-    margin-left: 20px;
+    margin-left: 0px;
   }
   .social-mobile {
     max-width: 150px;
     width: 100%;
     justify-content: space-between;
-    margin-left: 20px;
+    margin-left: 0px;
   }
