--- a/css/who-do-i-work-with.css
+++ b/css/who-do-i-work-with.css
@@ -1,3 +1,6 @@
+.who-do-i-work-with {
+    padding-top: 70px;
+}
 .who-do-i-work-with-text {
     font-family: 'Ruda';
     font-style: normal;
@@ -7,8 +10,7 @@
     text-align: center;
     text-transform: uppercase;
     color: #000000;
-    padding-bottom: 50px;
-    padding-top: 70px;
+    margin-bottom: 50px;
 }
 .who-do-slide-img {
     max-width: 996px;
@@ -80,5 +82,92 @@
     letter-spacing: 0.05em;
     text-transform: uppercase;
     color: #000000;
-    padding-bottom: 100px;
+}
+
+.new-design {
+    display: flex;
+}
+.elem-disgn {
+    max-width: 292.5px;
+    width: 100%;
+    max-height: 195.5px;
+    height: 100%;
+    background: #CAE9EB;
+    position: relative;
+}
+.triangle-border-right {
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 20px;
+}
+.triangle-border-left {
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 20px;
+}
+.triangle-border-right::after {
+    z-index: 2;
+    content: '';
+    width: 0;
+    height: 0;
+    border: 15px solid transparent;
+    border-left-color: #CAE9EB;
+
+    position: absolute;
+    left: 100%;
+    top: 80px;
+}
+.triangle-border-left::before {
+    z-index: 2;
+    content: '';
+    width: 0;
+    height: 0;
+    border: 15px solid transparent;
+    border-right-color: #CAE9EB;
+
+    position: absolute;
+    right: 100%;
+    top:80px;
+}
+.elem-disign-image {
+    width: 100%;
+    object-fit: contain;
+    display: flex;
+}
+.elem-disgn-text-1 {
+    font-family: 'Rubik', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 25px;
+    text-transform: uppercase;
+    color: #000000;
+}
+.elem-disgn-text-2 {
+    font-family: 'Rubik', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 25px;
+    color: #000000;
+    margin-top: 10px;
+}
+.double-design {
+    justify-content: center;
+}
+.min-height {
+    min-height: 195.5px
+}
+.cards-new-design {
+    display: flex;
+}
+.new-design-mobile {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+}
+.mobile-card-design {
+    display: flex;
 }
