--- a/css/what-is-barre.css
+++ b/css/what-is-barre.css
@@ -1,5 +1,5 @@
 .what-is-barre {
-    margin-top: 100px;
+    padding: 50px 0px 50px 0px;
 }
 .what-is-barre-text {
     font-family: 'Ruda', sans-serif;
