--- a/css/reviews.css
+++ b/css/reviews.css
@@ -1,3 +1,6 @@
+.reviews {
+    padding: 50px 0px 50px 0px;
+}
 .reviews-text {
     font-family: 'Ruda', sans-serif;
     font-style: normal;
@@ -6,8 +9,8 @@
     line-height: 30px;
     text-transform: uppercase;
     color: #000000;
-    margin: 100px 0px 75px 0px;
     text-align: center;
+    margin-bottom: 50px;
 }
 .review-img {
     width: 281px;
@@ -15,9 +18,6 @@
     object-fit: cover;
 }
 
-.review-slider-pagintation {
-    padding-bottom: 50px;
-}
 .review-slider-pagintation .swiper-pagination-bullet {
     width: 15px;
     height: 15px;
