--- a/css/services.css
+++ b/css/services.css
@@ -1,6 +1,6 @@
 .individual-services {
     background: linear-gradient(180deg, #EB6FFF 0%, rgba(235, 111, 255, 0) 100%);
-    padding-top: 107px;
+    padding: 100px 0px 50px 0px;
 }
 
 .services-content {
@@ -9,7 +9,7 @@
 .services-info {
     position: relative;
     left: -62px;
-    margin-top: 120px;
+    padding-top: 120px;
 }
 .atmosphere {
     position: relative;
@@ -20,7 +20,7 @@
 .arrow-text {
     display: flex;
     align-items: center;
-    margin-top: 50px;
+    margin-bottom: 50px;
 }
 .arrow-text-barre {
     font-family: 'Rubik', sans-serif;
@@ -52,6 +52,7 @@
     line-height: 30px;
     text-transform: uppercase;
     color: #000000;
+    margin-bottom: 50px;
 }
 .any-training-text {
     font-family: 'Rubik', sans-serif;
@@ -60,8 +61,7 @@
     font-size: 20px;
     line-height: 30px;
     color: #000000;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .service-button {
@@ -98,7 +98,6 @@
     width: 100%;
     justify-content: space-around;
     align-items: center;
-    padding-top: 60px;
 }
 .image-arrow-mobile {
     max-width: 77px;
@@ -109,9 +108,14 @@
 .our-services-mobile {
     text-align: center;
 }
-.services-info-mobile {
-    padding-top: 50px;
-    padding-bottom: 100px;
+.services-info-mobile-1 {
+   
+    display: none;
+    justify-content: center;
+    flex-direction: column;
+}
+.services-info-mobile-2 {
+    
     display: none;
     justify-content: center;
     flex-direction: column;
