--- a/css/who-do-i-work-with.css
+++ b/css/who-do-i-work-with.css
@@ -181,6 +181,7 @@
 .carousel-wr {
     display: flex;
     overflow-x: auto;
+    overflow-y: hidden;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
