--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -81,7 +81,11 @@
     display: block;
   
     color: #000;
-    margin-top: 15px;
+    padding-top: 15px;
+    margin: 0px -24px 0px -24px;
+    padding-left: 24px;
+    padding-top: 15px;
+    padding-bottom: 15px;
   
     font-family: 'Ruda', sans-serif;
     font-size: 20px;
