--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,18 @@
 }
 
 @media (max-width: 1216px) {
+    .mission-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+    }
+    .mission-column-1 {
+        left: -20%;
+    }
+    .mission-column-2 {
+        right: -20%;
+    }
     .cases-text {
         margin-bottom: 70px;
     }
@@ -216,16 +228,7 @@
     .triangle-two {
         display: none;
     }
-    .mission-content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .mission-column-2 {
-        overflow: hidden;
-        position: relative;
-        right: 30px;
-    }
+    
     .two {
         left: 315px;
     }
@@ -398,21 +401,27 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        left: 0;
+        margin-bottom: 85px;
     }
-    .mission-text-left {
-        margin-top: -80px;
+    .text-left-2 {
+        margin-top: 15px;
+    }
+    .text-left-1 {
+        right: 0px;
+        bottom: 90px;
+        left: 5%;
+        top: 80%;
     }
     .mission-column-2 {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        position: static;
+        position: relative;
         margin-top: 0px;
+        right: 0;
     }
-    .mission-text-right {
-        top: 72px;
-        left: 40px;
-    }
+    
     .mod {
         max-width: 500px;
     }
